--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -12,7 +12,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* margin: auto; */
   height: 100%;
 }
 .search-inputs input {
@@ -23,4 +22,5 @@
 .search-inputs button {
     font-size: 1.5rem;
     width: 10%;
+    margin: 0 1%
 }
