--- a/src/Components/ResultCard/ResultCard.css
+++ b/src/Components/ResultCard/ResultCard.css
@@ -20,3 +20,11 @@
     width: 50%;
     margin: 0 auto; 
 }
+
+.is-favorite-active {
+    background-color: yellow;
+}
+
+.is-favorite {
+    background-color: gray;
+}
