--- a/src/Components/ResultsContainer/ResultsContainer.css
+++ b/src/Components/ResultsContainer/ResultsContainer.css
@@ -1,13 +1,13 @@
 .results-container {
-    background-color: lightgray;
-    width: 90%;
-    height: 80vh;
-    margin: 2% 5%;
+     width: 90%;
+    margin: 0 5%;
+    border-radius: 5px;
+    background-color: #edac3c;
 }
 
 .results-container h2 {
-    margin: 2%;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    margin: 2% 0 2% 5%;
 }
 
 .results-container-display {
