--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -6,6 +6,21 @@
 }
 
 .details-section h3 {
+    font-size: 2rem;
+    /* margin: 0 */
+}
+
+/* .details-section p {
     font-size: 1.5rem;
-    margin: 2% 0 2% 5%;
+} */
+
+.brewery-info {
+    text-align: center;
+    padding-bottom: 2%;
+    border-bottom: 1px solid black;
+}
+
+.brewery-info p {
+    font-size: 1.2rem;
+    margin: 0
 }
