--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,21 +2,24 @@ header {
     /* border-bottom: 5px solid #040404; */
     display: grid;
     grid-template-columns: repeat (5 1fr);
-    color: #040404;
+    /* color: #040404; */
     /* background: #8f0e01; */
     /* width: 90%; */
     /* margin: 0 0 -6% 0;  */
-    background: rgb(255,199,95);
-    background: linear-gradient(90deg, rgba(255,199,95,1) 1%, rgba(219,145,9,1) 100%);
+    /* background: rgb(255,199,95); */
+    /* background: linear-gradient(90deg, rgba(255,199,95,1) 1%, rgba(219,145,9,1) 100%); */
+    background: black;
 }
 
 h1 {
     margin: 5%;
-    
+    font-size: 3em;
 }   
 
 .beers-link {
-    color: #885900;
+    color: #fff;
+    /* color: #edac3c; */
+    /* color: #885900; */
     text-decoration: none;
 
 }
@@ -26,7 +29,8 @@ h1 {
 }
 
 header button {
-    font-size: 2em;
+    font-size: 1.5em;
+    margin: 10% 0% 0 10%;
 }
 
 
