--- a/src/Components/ResultsContainer/ResultsContainer.css
+++ b/src/Components/ResultsContainer/ResultsContainer.css
@@ -2,7 +2,7 @@
      width: 90%;
     margin: 0 5%;
     border-radius: 5px;
-    background-color: #edac3c;
+    /* background-color: #edac3c; */
 }
 
 .results-container h2 {
