--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -1,18 +1,14 @@
 .details-section {
     width: 90%;
-    margin: 0 5%;
+    margin: 1% 5%;
     border-radius: 5px;
     background-color: #edac3c;
+    border: 1px solid black;
 }
 
 .details-section h3 {
     font-size: 2rem;
-    /* margin: 0 */
 }
-
-/* .details-section p {
-    font-size: 1.5rem;
-} */
 
 .brewery-info {
     text-align: center;
