--- a/src/Components/FavoritesContainer/FavoritesContainer.css
+++ b/src/Components/FavoritesContainer/FavoritesContainer.css
@@ -2,13 +2,7 @@
     width: 90%;
     margin: 0 5%;
     border-radius: 5px;
-    /* background-color: #edac3c; */
 }
-
-/* .details-section h3 {
-    font-size: 1.5rem;
-    margin: 2% 0 2% 5%;
-} */
 
 .favorites-container h2 {
     margin: 2%;
@@ -17,7 +11,7 @@
 
 .favorites-container-display {
     display: flex;
-    flex: wrap;
+    flex-wrap: wrap;    
 }
 
 .favorites-container h3 {
