--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,13 +1,6 @@
 header {
-    /* border-bottom: 5px solid #040404; */
     display: grid;
     grid-template-columns: repeat (5 1fr);
-    /* color: #040404; */
-    /* background: #8f0e01; */
-    /* width: 90%; */
-    /* margin: 0 0 -6% 0;  */
-    /* background: rgb(255,199,95); */
-    /* background: linear-gradient(90deg, rgba(255,199,95,1) 1%, rgba(219,145,9,1) 100%); */
     background: black;
 }
 
@@ -18,8 +11,6 @@ h1 {
 
 .beers-link {
     color: #fff;
-    /* color: #edac3c; */
-    /* color: #885900; */
     text-decoration: none;
 
 }
@@ -31,6 +22,10 @@ h1 {
 header button {
     font-size: 1.5em;
     margin: 10% 0% 0 10%;
+    color: #fff;
+    background-color: black;
+    border: 1px solid #fff;
+    border-radius: 5px;
 }
 
 
