--- a/src/Components/MyRating/MyRating.css
+++ b/src/Components/MyRating/MyRating.css
@@ -1,17 +1,17 @@
 .my-rating label {
-    font-size: 1.5rem;
-    margin: 0 5%;
+    font-size: 1.4rem;
+    margin: 5% 5%;
     font-weight: bold;
-    /* display: block; */
 }
 
 .my-rating select {
-    font-size: 1.5rem;
-    /* display: block; */
+    font-size: 1rem;
+    margin: 0 5%;
 }
 
 .my-rating p {
     display: inline;
     font-size: 1rem;
-    margin: 0 1%;
+    margin: 2% 5%;
+    display: block;
 }
