--- a/src/Components/NotesDisplay/NotesDisplay.css
+++ b/src/Components/NotesDisplay/NotesDisplay.css
@@ -1,5 +1,7 @@
 .notes-display-section {
-    width: 90%;    
+    width: 90%;
+    height: 30vh;
+    overflow: scroll;    
 }
 
 .notes-display-title {
