--- a/src/Components/ResultCard/ResultCard.css
+++ b/src/Components/ResultCard/ResultCard.css
@@ -2,15 +2,15 @@
     border: 1px solid black;
     display: block;
     margin: 2%;
-    width: 20%; 
+    width: 18%; 
     text-align: center;
-    /* background-color: #fff; */
     background-color: #edac3c;
     border-radius: 5px;
     padding: 1%;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    align-items: space-between;
 }
 
 .result-card h3 {
@@ -34,6 +34,13 @@
     width: 90%;
     margin: 0 auto; 
     margin: 0 5%;
+    border-radius: 5px;
+}
+
+.details-button {
+    background-color: black;
+    border: 2px solid #fff;
+    color: #fff;
 }
 
 .is-favorite-active {
@@ -41,9 +48,12 @@
 }
 
 .is-favorite {
-    background-color: gray;
+    background-color: black;
+    border: 2px solid #fff;
+    color: #fff;
 }
 
 .address {
     margin: 0;
 }
+
