--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -1,13 +1,16 @@
 .details-section {
     width: 90%;
-    margin: 1% 5%;
+    margin: 3% 5%;
     border-radius: 5px;
     background-color: #edac3c;
-    border: 1px solid black;
+    border: 5px solid black;
 }
 
 .details-section h3 {
     font-size: 2rem;
+    margin: 0;
+    padding: 1% 0;
+    border-bottom: 3px solid black;
 }
 
 .brewery-info {
@@ -18,5 +21,10 @@
 
 .brewery-info p {
     font-size: 1.2rem;
-    margin: 0
+    margin: 1%
+}
+
+.details-section h4 {
+    margin: 0;
+    padding: 0;
 }
