--- a/src/Components/NoteCard/NoteCard.css
+++ b/src/Components/NoteCard/NoteCard.css
@@ -1,6 +1,7 @@
 .note-card {
     border: 1px solid black;
     margin: 2% 0;
+    padding: 1%;
     width: 98%;
     background-color: #fff;
     -webkit-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
