--- a/src/Components/Notes/Notes.css
+++ b/src/Components/Notes/Notes.css
@@ -1,6 +1,9 @@
 #notes-header {
     font-size: 1.5rem;
     text-align: center;
+    color: #fff;
+    background-color: black;
+    padding: 1%
 }
 
 .notes-section {
@@ -9,10 +12,10 @@
 }
 
 .rating-features {
-    border-right: 1px solid black;
+    border-right: 2px solid black;
 }
 
 .notes-display {
     margin: 0 2%;
-    border-right: 1px solid black;
+    border-right: 2px solid black;
 }
