Add favorite button to details page

--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -10,7 +10,7 @@
 .search-inputs {
   display: block;
   position: absolute;
-  top: 70%;
+  top: 35%;
   left: 35%;
   width: 100%;
 }
@@ -20,15 +20,24 @@
   margin: 0;
 }
 .search-inputs input {
-    font-size: 2rem;
-    width: 20%;
-    border-radius: 5px;
+  font-size: 2rem;
+  width: 20%;
+  border-radius: 5px;
+  border: 2px solid black;
+  -webkit-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75); 
   }
   
   .search-inputs button {
-    font-size: 2rem;
-    margin: 0 3%;
-    border-radius: 5px;
+  font-size: 2rem;
+  margin: 0 2%;
+  border-radius: 5px;
+  background-color: #fff; 
+  border: 2px solid black;
+  -webkit-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
   }
 
 .background-image {
