--- a/src/Components/Notes/Notes.css
+++ b/src/Components/Notes/Notes.css
@@ -19,3 +19,13 @@
     margin: 0 2%;
     border-right: 2px solid black;
 }
+
+.notes-favorite-button {
+    margin: 5%;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    padding: 1% 3%;
+    color: #fff;
+    background-color: black;
+    border: 2px solid #fff;
+}
