--- a/src/Components/ResultsContainer/ResultsContainer.css
+++ b/src/Components/ResultsContainer/ResultsContainer.css
@@ -17,3 +17,15 @@
 .results-container h3 {
     display: block;
 }
+
+.results-back-button {
+    font-size: 1.5em;
+    margin: 5% 0% 0 45%;
+    color: #fff;
+    background-color: black;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    padding: 2%;
+    width: 100%;
+    /* border: 2px solid white; */
+}
